src/index.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap');

:root {
  --dark-cyan: hsl(180, 29%, 50%);
  --light-cyan-background: hsl(180, 52%, 96%);
  --light-cyan-tablet: hsl(180, 31%, 95%);
  --dark-grey-cyan: hsl(180, 8%, 52%);
  --very-dark-grey-cyan: hsl(180, 14%, 20%);
}

* {
  box-sizing: border-box;
  margin: 0;
  font-family: 'League Spartan', sans-serif;
}

body {
  background: var(--light-cyan-background);
}

p {
  font-size: 15px;
}

span.interpunct {
  padding: 0 10px;
}

.App__container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.App__background-image {
  background: var(--dark-cyan);
  width: 100%;
  height: 156px;
}

.JobListings__container {
  display: flex;
  max-width: 1110px;
  width: 100%;
  padding: 60px 30px;
  flex-direction: column;
  gap: 30px;
}

.JobListing__border-container {
  border-radius: 4px;
  box-shadow: 2px 2px 8px rgb(0,0,0,0.2);
  overflow: hidden;
}

.JobListing__container {
  padding: 32px 40px;
  background: white;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.JobListing__container.featured {
  border-left: 5px solid var(--dark-cyan);
  padding-left: calc(40px - 5px); /* kinda hacky way to undo the border, do this a better way? */
}

.JobSummary__container {
  margin-left: 24px;
  padding: 4px 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
}

.JobListing__image-and-summary {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.JobSummary__company {
  color: var(--dark-cyan);
  font-weight: bold;
}

.JobSummary__position {
  color: var(--very-dark-grey-cyan);
  font-size: 18px;
  font-weight: bold;
}

.JobSummary__details {
  color: var(--dark-grey-cyan);
}

.JobTags__container {
  display: flex;
  flex-direction: row;
  gap: 15px;
}

.JobTag__container {
  background: var(--light-cyan-tablet);
  padding: 8px;
  color: var(--dark-cyan);
  font-weight: bold;
}

